syntax = "proto3";

package proto;

option go_package = "github.com/AshwinC17/train-ticket-system/proto";

service TicketService {
  rpc PurchaseTicket(TicketRequest) returns (TicketResponse) {}
  rpc GetReceipt(User) returns (TicketResponse) {}
  rpc GetUsersBySection(SectionRequest) returns (UserSeatResponse) {}
  rpc RemoveUser(User) returns (Empty) {}
  rpc ModifySeat(ModifySeatRequest) returns (Empty) {}
}

message TicketRequest {
  User user = 1;
  string from = 2;
  string to = 3;
}

message TicketResponse {
  string receipt = 1;
}

message User {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message UserSeat {
  User user = 1;
  string section = 2;
}

message UserSeatResponse {
  repeated UserSeat user_seat = 1;
}

message SectionRequest {
  string section = 1;
}

message ModifySeatRequest {
  User user = 1;
  string new_section = 2;
}

message Empty {}